2000-06-27  Adam Fedor  <fedor@gnu.org>

	* common.make (OPTFLAG): Remove -fno-strict-aliasing (Doesn't 
	work on old gcc2.8.0).
	* target.make (solaris/TARGET_SYSTEM_LIBS): Readd posix4 when threaded
	(Solaris/BUNDLE_LDFLAGS): Go back to old flags - new ones don't
	work with gcc 2.8.0.
	* configure.in: Cache search for libwraster, fix searching for
	other graphics libs.

2000-06-22  Adam Fedor  <fedor@gnu.org>

	* configure.in: Fix for exporting vars on old sh's.

Thu Jun 22 18:58:41 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* common.make (JAVAH): Set it to 'javah' if null.

2000-06-21  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for alternate objc libraries

	* library.make: Clean the library_name of '-' so it can be
	used in a define.

	* target.make: Target for cygwin

Wed Jun 21 12:35:43 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	Rewritten and simplified java support.
	* GNUstep.sh.in: Only append to the CLASSPATH if not already there. 
	* GNUstep.csh.in: Simplified java classpath.
	* brain.make (SYSTEM_INCLUDES): Removed JAVA_INCLUDES.
	* common.make (JAVAC): Set it to 'javac' only if it is null, 
	so it can be overridden.
	* common.make (GNUSTEP_JAVA): New variable.
	* config.make.in: Removed old java code.
	* configure.in: Idem.
	* configure: Rebuilt.
	* openapp.in: Removed old java code.
	* rules.make: Completely remanaged java stuff.

	* GNUmakefile.in (MAKE_FILES): Added java.make.
	* java.make: New makefile for compiling not-GNUstep java 
	packages.

Tue Jun 20 19:59:19 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* objc.make (internal-objc_program-install): Depend on building
	the program first.

2000-06-19  Adam Fedor  <fedor@gnu.org>

	* bundle.make (bundle-resource-files): Remove dependancy on 
	RESOURCE_FILES, which may not exist

	* configure.in: Add test for cygwin

2000-06-12  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile.in: Use  perl which_lib script on machines that have it.