@@ -67,16 +67,17 @@ if ( ! ${?GNUSTEP_BUILD_ROOT} ) then
 #
 # Add the GNUstep tools directories to the path
 #
-if ( ! ${?GNUSTEP_PATHPREFIX_LIST} ) then
-  setenv GNUSTEP_PATHPREFIX_LIST \
+if ( ! ${?GNUSTEP_PATHPREFIX} ) then
+  setenv GNUSTEP_PATHPREFIX \
          ${GNUSTEP_USER_ROOT}:${GNUSTEP_LOCAL_ROOT}:${GNUSTEP_SYSTEM_ROOT}
 endif
 
 set tp = ""
-foreach dir ( `/bin/sh -c 'IFS=:; for i in ${GNUSTEP_PATHPREFIX_LIST}; do echo $i; done'` )
+foreach dir ( `/bin/sh -c 'IFS=:; for i in ${GNUSTEP_PATHPREFIX}; do echo $i; done'` )
   set tp=${tp}${dir}/Tools/${GNUSTEP_HOST_CPU}/${GNUSTEP_HOST_OS}:
   set tp=${tp}${dir}/Tools:
 end
+setenv GNUSTEP_PATHPREFIX_LIST $GNUSTEP_PATHPREFIX
 setenv PATH ${tp}${PATH}
 
 source ${GNUSTEP_SYSTEM_ROOT}/Makefiles/ld_lib_path.csh
@@ -103,7 +104,11 @@ endif # ( "${GNUSTEP_BUILD_ROOT}" == "" )
 #
 set gnustep_class_path="${GNUSTEP_USER_ROOT}/Libraries/Java:${GNUSTEP_LOCAL_ROOT}/Libraries/Java:${GNUSTEP_SYSTEM_ROOT}/Libraries/Java"
 
-setenv CLASSPATH "${CLASSPATH}:${gnustep_class_path}"
+if ( ! ${?CLASSPATH} ) then
+  setenv CLASSPATH "${gnustep_class_path}"
+else
+  setenv CLASSPATH "${CLASSPATH}:${gnustep_class_path}"
+endif
 
 #
 #
