@@ -7,6 +7,8 @@
 	work with gcc 2.8.0.
 	* configure.in: Cache search for libwraster, fix searching for
 	other graphics libs.
+	* GNUstep.csh.in: Shorted GNUSTEP_PATHPREFIX_LIST since length of
+	variable breaks some csh's. Check if CLSSPATH exists before setting.
 
 2000-06-22  Adam Fedor  <fedor@gnu.org>
 
